--- a/approx_nn/approx.ipynb
+++ b/approx_nn/approx.ipynb
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data preprocessing"
+    "### Load data"
    ]
   },
   {
@@ -542,11 +542,7 @@
     "        xnn = self.nn(x)\n",
     "        xlo = self.lo(x)\n",
     "\n",
-    "        if not self.training:\n",
-    "            # x = tor(tand(tnot(txor(xhi, xlo)), xhi), tand(txor(xhi, xlo), xnn)).float()\n",
-    "            x = torch.where(xhi==1, xhi, torch.where(xlo==0, xlo, xnn))\n",
-    "        else:\n",
-    "            x = torch.where(xhi>0.5, xhi, torch.where(xlo<0.5, xlo, xnn))\n",
+    "        x = torch.where(xhi>0.5, xhi, torch.where(xlo<0.5, xlo, xnn))\n",
     "\n",
     "        return {\"hi\": xhi, \"nn\": xnn, \"lo\": xlo, \"wh\": x}"
    ]
