--- a/approx_nn/compare.ipynb
+++ b/approx_nn/compare.ipynb
@@ -42,12 +42,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metrics, Activations, Loss and Networks definitions"
+    "## Load data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([280, 14])\n"
+     ]
+    }
+   ],
+   "source": [
+    "np_x, np_y = get_loan_dataset(balancing=True, discretizing=False, hot_encoding=True, rmv_pct=0.985)\n",
+    "x_data, y_data = torch.Tensor(np_x), torch.Tensor(np_y)\n",
+    "input_size = x_data.size(1)\n",
+    "print(x_data.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metrics, Activations, Loss and Networks definitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +196,7 @@
     "        hl1 = 10\n",
     "\n",
     "        self.nn = nn.Sequential(OrderedDict([\n",
-    "            ('l1', nn.Linear(25,hl1)),\n",
+    "            ('l1', nn.Linear(input_size,hl1)),\n",
     "            ('a1', StepActivation()),\n",
     "            ('l2', nn.Linear(hl1,1)),\n",
     "            ('a2', StepActivation())\n",
@@ -188,7 +215,7 @@
     "        hl2 = 25\n",
     "\n",
     "        self. nn = nn.Sequential(\n",
-    "            nn.Linear(25,hl1),\n",
+    "            nn.Linear(input_size,hl1),\n",
     "            nn.Sigmoid(),\n",
     "            nn.Linear(hl1,hl2),\n",
     "            nn.Sigmoid(),\n",
@@ -230,6 +257,9 @@
     "        self.nn = self.nn.round(*args)\n",
     "        self.lo = self.lo.round(*args)\n",
     "        return self\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return '\\n'.join([str(t) for t in (self.x, self.hi, self.nn, self.lo)])\n",
     "\n",
     "class BoundNetLoss():\n",
     "    def __init__(self, hi, nn, lo):\n",
@@ -282,7 +312,7 @@
     "        hl2 = 25\n",
     "\n",
     "        self.nn = nn.Sequential(\n",
-    "            nn.Linear(25,hl1),\n",
+    "            nn.Linear(input_size,hl1),\n",
     "            nn.Sigmoid(),\n",
     "            nn.Linear(hl1,hl2),\n",
     "            nn.Sigmoid(),\n",
@@ -300,38 +330,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([368, 25])\n"
-     ]
-    }
-   ],
-   "source": [
-    "np_x, np_y = get_loan_dataset(balancing=True, discretizing=True, hot_encoding=True, rmv_pct=0.985)\n",
-    "x_data, y_data = torch.Tensor(np_x), torch.Tensor(np_y)\n",
-    "print(x_data.size())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Training functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +344,6 @@
     "        model.train()\n",
     "        y_pred = model(x)\n",
     "        \n",
-    "        # loss with true y values\n",
     "        loss = loss_fn(y_pred, y)\n",
     "\n",
     "        model.zero_grad()\n",
@@ -373,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -435,55 +438,55 @@
      "output_type": "stream",
      "text": [
       "Fold   1 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.769    |    SimpleNet      0.667    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
-      "\t              High           0.606    |    Low            0.783    ||    High           0.922    |    Low            0.946\n",
-      "\tCoverage      High           0.526    |    Low            0.947    ||    High           0.855    |    Low            1.000\n",
-      "\t              High           0.778    |    Low            0.500    ||    High           1.000    |    Low            0.886\n",
+      "\tF1 score      BoundNet       0.813    |    SimpleNet      0.800    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.769    |    Low            0.765    ||    High           0.817    |    Low            0.851\n",
+      "\tCoverage      High           0.714    |    Low            0.929    ||    High           0.690    |    Low            1.000\n",
+      "\t              High           0.857    |    Low            0.500    ||    High           1.000    |    Low            0.651\n",
       "Fold   2 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.556    |    SimpleNet      0.667    ||    BoundNet       0.985    |    SimpleNet      0.985\n",
-      "\t              High           0.452    |    Low            0.632    ||    High           0.946    |    Low            0.968\n",
-      "\tCoverage      High           0.368    |    Low            0.632    ||    High           0.897    |    Low            1.000\n",
-      "\t              High           0.722    |    Low            0.611    ||    High           1.000    |    Low            0.934\n",
+      "\tF1 score      BoundNet       0.733    |    SimpleNet      0.733    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.583    |    Low            0.824    ||    High           0.794    |    Low            0.837\n",
+      "\tCoverage      High           0.500    |    Low            1.000    ||    High           0.659    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.571    ||    High           1.000    |    Low            0.611\n",
       "Fold   3 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.700    |    SimpleNet      0.732    ||    BoundNet       0.988    |    SimpleNet      0.988\n",
-      "\t              High           0.632    |    Low            0.766    ||    High           0.918    |    Low            0.935\n",
-      "\tCoverage      High           0.632    |    Low            0.947    ||    High           0.848    |    Low            1.000\n",
-      "\t              High           0.611    |    Low            0.444    ||    High           1.000    |    Low            0.861\n",
+      "\tF1 score      BoundNet       0.759    |    SimpleNet      0.759    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.545    |    Low            0.727    ||    High           0.794    |    Low            0.863\n",
+      "\tCoverage      High           0.429    |    Low            0.857    ||    High           0.659    |    Low            1.000\n",
+      "\t              High           0.857    |    Low            0.500    ||    High           1.000    |    Low            0.683\n",
       "Fold   4 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.529    |    SimpleNet      0.588    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
-      "\t              High           0.400    |    Low            0.647    ||    High           0.881    |    Low            0.938\n",
-      "\tCoverage      High           0.316    |    Low            0.579    ||    High           0.788    |    Low            1.000\n",
-      "\t              High           0.722    |    Low            0.778    ||    High           1.000    |    Low            0.867\n",
+      "\tF1 score      BoundNet       0.765    |    SimpleNet      0.750    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.857    |    Low            0.778    ||    High           0.885    |    Low            0.840\n",
+      "\tCoverage      High           0.857    |    Low            1.000    ||    High           0.794    |    Low            1.000\n",
+      "\t              High           0.857    |    Low            0.429    ||    High           1.000    |    Low            0.619\n",
       "Fold   5 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.789    |    SimpleNet      0.711    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
-      "\t              High           0.727    |    Low            0.821    ||    High           0.911    |    Low            0.951\n",
-      "\tCoverage      High           0.667    |    Low            0.889    ||    High           0.837    |    Low            1.000\n",
-      "\t              High           0.842    |    Low            0.737    ||    High           1.000    |    Low            0.897\n",
+      "\tF1 score      BoundNet       0.640    |    SimpleNet      0.640    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.455    |    Low            0.765    ||    High           0.714    |    Low            0.818\n",
+      "\tCoverage      High           0.357    |    Low            0.929    ||    High           0.556    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.500    ||    High           1.000    |    Low            0.556\n",
       "Fold   6 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.632    |    SimpleNet      0.649    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
-      "\t              High           0.629    |    Low            0.636    ||    High           0.915    |    Low            0.954\n",
-      "\tCoverage      High           0.611    |    Low            0.778    ||    High           0.843    |    Low            1.000\n",
-      "\t              High           0.684    |    Low            0.368    ||    High           1.000    |    Low            0.903\n",
+      "\tF1 score      BoundNet       0.545    |    SimpleNet      0.786    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.235    |    Low            0.593    ||    High           0.759    |    Low            0.887\n",
+      "\tCoverage      High           0.143    |    Low            0.571    ||    High           0.611    |    Low            1.000\n",
+      "\t              High           0.929    |    Low            0.643    ||    High           1.000    |    Low            0.746\n",
       "Fold   7 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.842    |    SimpleNet      0.811    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
-      "\t              High           0.743    |    Low            0.762    ||    High           0.904    |    Low            0.933\n",
-      "\tCoverage      High           0.722    |    Low            0.889    ||    High           0.825    |    Low            1.000\n",
-      "\t              High           0.789    |    Low            0.579    ||    High           1.000    |    Low            0.855\n",
+      "\tF1 score      BoundNet       0.733    |    SimpleNet      0.759    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.522    |    Low            0.688    ||    High           0.694    |    Low            0.881\n",
+      "\tCoverage      High           0.429    |    Low            0.786    ||    High           0.532    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.500    ||    High           1.000    |    Low            0.730\n",
       "Fold   8 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.563    |    SimpleNet      0.706    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
-      "\t              High           0.462    |    Low            0.579    ||    High           0.875    |    Low            0.951\n",
-      "\tCoverage      High           0.333    |    Low            0.611    ||    High           0.777    |    Low            1.000\n",
-      "\t              High           0.895    |    Low            0.526    ||    High           1.000    |    Low            0.897\n",
+      "\tF1 score      BoundNet       0.741    |    SimpleNet      0.786    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.583    |    Low            0.788    ||    High           0.833    |    Low            0.863\n",
+      "\tCoverage      High           0.500    |    Low            0.929    ||    High           0.714    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.571    ||    High           1.000    |    Low            0.683\n",
       "Fold   9 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.706    |    SimpleNet      0.743    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
-      "\t              High           0.571    |    Low            0.762    ||    High           0.882    |    Low            0.938\n",
-      "\tCoverage      High           0.444    |    Low            0.889    ||    High           0.789    |    Low            1.000\n",
-      "\t              High           0.889    |    Low            0.556    ||    High           1.000    |    Low            0.867\n",
+      "\tF1 score      BoundNet       0.600    |    SimpleNet      0.600    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.400    |    Low            0.684    ||    High           0.777    |    Low            0.846\n",
+      "\tCoverage      High           0.286    |    Low            0.929    ||    High           0.635    |    Low            1.000\n",
+      "\t              High           0.857    |    Low            0.214    ||    High           1.000    |    Low            0.635\n",
       "Fold  10 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.718    |    SimpleNet      0.757    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
-      "\t              High           0.788    |    Low            0.683    ||    High           0.915    |    Low            0.957\n",
-      "\tCoverage      High           0.722    |    Low            0.778    ||    High           0.843    |    Low            1.000\n",
-      "\t              High           0.889    |    Low            0.500    ||    High           1.000    |    Low            0.910\n"
+      "\tF1 score      BoundNet       0.710    |    SimpleNet      0.667    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.692    |    Low            0.778    ||    High           0.844    |    Low            0.834\n",
+      "\tCoverage      High           0.643    |    Low            1.000    ||    High           0.730    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.429    ||    High           1.000    |    Low            0.603\n"
      ]
     }
    ],
@@ -531,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -539,10 +542,10 @@
      "output_type": "stream",
      "text": [
       "Average  :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.680    |    SimpleNet      0.703    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
-      "\t              High           0.601    |    Low            0.707    ||    High           0.907    |    Low            0.947\n",
-      "\tCoverage      High           0.534    |    Low            0.794    ||    High           0.830    |    Low            1.000\n",
-      "\t              High           0.782    |    Low            0.560    ||    High           1.000    |    Low            0.888\n"
+      "\tF1 score      BoundNet       0.704    |    SimpleNet      0.728    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.564    |    Low            0.739    ||    High           0.791    |    Low            0.852\n",
+      "\tCoverage      High           0.486    |    Low            0.893    ||    High           0.658    |    Low            1.000\n",
+      "\t              High           0.829    |    Low            0.486    ||    High           1.000    |    Low            0.652\n"
      ]
     }
    ],
