reorganize custom loss and activations

--- a/approx_nn/compare.ipynb
+++ b/approx_nn/compare.ipynb
@@ -31,9 +31,12 @@
     "\n",
     "filepath = os.path.abspath('')\n",
     "sys.path.append(os.path.join(filepath, \"..\", \"compiling_nn\"))\n",
+    "sys.path.append(os.path.join(filepath, \"..\", \"utils\"))\n",
     "sys.path.append(os.path.join(filepath, \"..\", \"datasets\", \"loan\"))\n",
     "from build_odd import compile_nn\n",
     "from loan import get_loan_dataset\n",
+    "from custom_activations import StepActivation\n",
+    "from custom_loss import AsymMSELoss, AsymBCELoss\n",
     "\n",
     "pd.options.mode.copy_on_write = True"
    ]
@@ -129,63 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class StepFunction(Function):\n",
-    "    @staticmethod\n",
-    "    def forward(ctx, input):\n",
-    "        output = torch.where(input>=0, torch.tensor(1.0), torch.tensor(0.0))\n",
-    "        ctx.save_for_backward(input)\n",
-    "        return output\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def backward(ctx, grad_output):\n",
-    "        input, = ctx.saved_tensors\n",
-    "        grad_input = torch.zeros_like(input)\n",
-    "        return grad_input\n",
-    "    \n",
-    "class StepActivation(nn.Module):\n",
-    "    def forward(self, input):\n",
-    "        if self.training:\n",
-    "            return torch.sigmoid(input)\n",
-    "        else:\n",
-    "            return StepFunction.apply(input)\n",
-    "    \n",
-    "class AsymMSELoss(nn.Module): # https://www.desmos.com/calculator/zmxcluqhkt\n",
-    "    def __init__(self, p=2):\n",
-    "        super(AsymMSELoss, self).__init__()\n",
-    "        self.p = p\n",
-    "\n",
-    "    def forward(self, input, label):\n",
-    "        dif = label - input\n",
-    "        a = torch.square(dif)\n",
-    "        b = a*self.p\n",
-    "        loss = torch.where(dif < 0, b, a)\n",
-    "        loss = torch.mean(loss)\n",
-    "        return loss\n",
-    "    \n",
-    "class AsymBCELoss(nn.Module):\n",
-    "    def __init__(self, p=2):\n",
-    "        super(AsymBCELoss, self).__init__()\n",
-    "        assert(p>0)\n",
-    "        self.p1 = p if p >= 1 else 1\n",
-    "        self.p2 = 1/p if p < 1 else 1\n",
-    "\n",
-    "    def forward(self, input, label):\n",
-    "        loss1 = torch.log(1-input+1e-8)\n",
-    "        loss1 = loss1.clamp(min=-100)\n",
-    "        loss2 = torch.log(input+1e-8)\n",
-    "        loss2 = loss2.clamp(min=-100)\n",
-    "        loss = -(self.p1*(1-label)*loss1+self.p2*label*loss2)\n",
-    "        \n",
-    "        loss = torch.mean(loss)\n",
-    "        return loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -438,55 +384,55 @@
      "output_type": "stream",
      "text": [
       "Fold   1 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.813    |    SimpleNet      0.800    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.769    |    Low            0.765    ||    High           0.817    |    Low            0.851\n",
-      "\tCoverage      High           0.714    |    Low            0.929    ||    High           0.690    |    Low            1.000\n",
-      "\t              High           0.857    |    Low            0.500    ||    High           1.000    |    Low            0.651\n",
+      "\tF1 score      BoundNet       0.788    |    SimpleNet      0.813    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.720    |    Low            0.686    ||    High           0.855    |    Low            0.869\n",
+      "\tCoverage      High           0.643    |    Low            0.857    ||    High           0.746    |    Low            1.000\n",
+      "\t              High           0.857    |    Low            0.357    ||    High           1.000    |    Low            0.698\n",
       "Fold   2 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.733    |    SimpleNet      0.733    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.583    |    Low            0.824    ||    High           0.794    |    Low            0.837\n",
-      "\tCoverage      High           0.500    |    Low            1.000    ||    High           0.659    |    Low            1.000\n",
-      "\t              High           0.786    |    Low            0.571    ||    High           1.000    |    Low            0.611\n",
+      "\tF1 score      BoundNet       0.643    |    SimpleNet      0.643    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.381    |    Low            0.727    ||    High           0.849    |    Low            0.848\n",
+      "\tCoverage      High           0.286    |    Low            0.857    ||    High           0.738    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.500    ||    High           1.000    |    Low            0.643\n",
       "Fold   3 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.759    |    SimpleNet      0.759    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.545    |    Low            0.727    ||    High           0.794    |    Low            0.863\n",
-      "\tCoverage      High           0.429    |    Low            0.857    ||    High           0.659    |    Low            1.000\n",
-      "\t              High           0.857    |    Low            0.500    ||    High           1.000    |    Low            0.683\n",
+      "\tF1 score      BoundNet       0.714    |    SimpleNet      0.800    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.455    |    Low            0.765    ||    High           0.771    |    Low            0.821\n",
+      "\tCoverage      High           0.357    |    Low            0.929    ||    High           0.627    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.500    ||    High           1.000    |    Low            0.563\n",
       "Fold   4 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.765    |    SimpleNet      0.750    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.857    |    Low            0.778    ||    High           0.885    |    Low            0.840\n",
-      "\tCoverage      High           0.857    |    Low            1.000    ||    High           0.794    |    Low            1.000\n",
-      "\t              High           0.857    |    Low            0.429    ||    High           1.000    |    Low            0.619\n",
+      "\tF1 score      BoundNet       0.786    |    SimpleNet      0.741    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.640    |    Low            0.722    ||    High           0.828    |    Low            0.881\n",
+      "\tCoverage      High           0.571    |    Low            0.929    ||    High           0.706    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.357    ||    High           1.000    |    Low            0.730\n",
       "Fold   5 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.640    |    SimpleNet      0.640    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.455    |    Low            0.765    ||    High           0.714    |    Low            0.818\n",
-      "\tCoverage      High           0.357    |    Low            0.929    ||    High           0.556    |    Low            1.000\n",
-      "\t              High           0.786    |    Low            0.500    ||    High           1.000    |    Low            0.556\n",
+      "\tF1 score      BoundNet       0.645    |    SimpleNet      0.615    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.500    |    Low            0.621    ||    High           0.794    |    Low            0.866\n",
+      "\tCoverage      High           0.429    |    Low            0.643    ||    High           0.659    |    Low            1.000\n",
+      "\t              High           0.714    |    Low            0.571    ||    High           1.000    |    Low            0.690\n",
       "Fold   6 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.545    |    SimpleNet      0.786    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.235    |    Low            0.593    ||    High           0.759    |    Low            0.887\n",
-      "\tCoverage      High           0.143    |    Low            0.571    ||    High           0.611    |    Low            1.000\n",
-      "\t              High           0.929    |    Low            0.643    ||    High           1.000    |    Low            0.746\n",
+      "\tF1 score      BoundNet       0.690    |    SimpleNet      0.714    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.750    |    Low            0.759    ||    High           0.855    |    Low            0.878\n",
+      "\tCoverage      High           0.643    |    Low            0.786    ||    High           0.746    |    Low            1.000\n",
+      "\t              High           0.929    |    Low            0.714    ||    High           1.000    |    Low            0.722\n",
       "Fold   7 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.733    |    SimpleNet      0.759    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.522    |    Low            0.688    ||    High           0.694    |    Low            0.881\n",
-      "\tCoverage      High           0.429    |    Low            0.786    ||    High           0.532    |    Low            1.000\n",
-      "\t              High           0.786    |    Low            0.500    ||    High           1.000    |    Low            0.730\n",
+      "\tF1 score      BoundNet       0.643    |    SimpleNet      0.643    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.455    |    Low            0.759    ||    High           0.817    |    Low            0.900\n",
+      "\tCoverage      High           0.357    |    Low            0.786    ||    High           0.690    |    Low            1.000\n",
+      "\t              High           0.786    |    Low            0.714    ||    High           1.000    |    Low            0.778\n",
       "Fold   8 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.741    |    SimpleNet      0.786    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.583    |    Low            0.788    ||    High           0.833    |    Low            0.863\n",
-      "\tCoverage      High           0.500    |    Low            0.929    ||    High           0.714    |    Low            1.000\n",
-      "\t              High           0.786    |    Low            0.571    ||    High           1.000    |    Low            0.683\n",
+      "\tF1 score      BoundNet       0.759    |    SimpleNet      0.667    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.571    |    Low            0.824    ||    High           0.885    |    Low            0.797\n",
+      "\tCoverage      High           0.429    |    Low            1.000    ||    High           0.794    |    Low            1.000\n",
+      "\t              High           0.929    |    Low            0.571    ||    High           1.000    |    Low            0.492\n",
       "Fold   9 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.600    |    SimpleNet      0.600    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.400    |    Low            0.684    ||    High           0.777    |    Low            0.846\n",
-      "\tCoverage      High           0.286    |    Low            0.929    ||    High           0.635    |    Low            1.000\n",
-      "\t              High           0.857    |    Low            0.214    ||    High           1.000    |    Low            0.635\n",
+      "\tF1 score      BoundNet       0.733    |    SimpleNet      0.750    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.769    |    Low            0.757    ||    High           0.855    |    Low            0.875\n",
+      "\tCoverage      High           0.714    |    Low            1.000    ||    High           0.746    |    Low            1.000\n",
+      "\t              High           0.857    |    Low            0.357    ||    High           1.000    |    Low            0.714\n",
       "Fold  10 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.710    |    SimpleNet      0.667    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.692    |    Low            0.778    ||    High           0.844    |    Low            0.834\n",
-      "\tCoverage      High           0.643    |    Low            1.000    ||    High           0.730    |    Low            1.000\n",
-      "\t              High           0.786    |    Low            0.429    ||    High           1.000    |    Low            0.603\n"
+      "\tF1 score      BoundNet       0.643    |    SimpleNet      0.786    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.571    |    Low            0.706    ||    High           0.752    |    Low            0.916\n",
+      "\tCoverage      High           0.429    |    Low            0.857    ||    High           0.603    |    Low            1.000\n",
+      "\t              High           0.929    |    Low            0.429    ||    High           1.000    |    Low            0.817\n"
      ]
     }
    ],
@@ -534,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -542,10 +488,10 @@
      "output_type": "stream",
      "text": [
       "Average  :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.704    |    SimpleNet      0.728    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
-      "\t              High           0.564    |    Low            0.739    ||    High           0.791    |    Low            0.852\n",
-      "\tCoverage      High           0.486    |    Low            0.893    ||    High           0.658    |    Low            1.000\n",
-      "\t              High           0.829    |    Low            0.486    ||    High           1.000    |    Low            0.652\n"
+      "\tF1 score      BoundNet       0.704    |    SimpleNet      0.717    ||    BoundNet       1.000    |    SimpleNet      1.000\n",
+      "\t              High           0.581    |    Low            0.732    ||    High           0.826    |    Low            0.865\n",
+      "\tCoverage      High           0.486    |    Low            0.864    ||    High           0.706    |    Low            1.000\n",
+      "\t              High           0.836    |    Low            0.507    ||    High           1.000    |    Low            0.685\n"
      ]
     }
    ],
